--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.0.15",
+    "chai": "^3.4.1",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.0.0",
@@ -17,8 +18,20 @@
     "gulp-stylus": "^2.1.0",
     "gulp-uglify": "^1.4.2",
     "gulp-watch": "^4.3.5",
+    "mocha": "^2.3.4",
     "nib": "^1.1.0",
-    "run-sequence": "^1.1.4"
+    "precommit-hook": "^3.0.0",
+    "run-sequence": "^1.1.4",
+    "selenium-standalone": "^4.7.2",
+    "webdriverio": "^3.3.0"
   },
-  "author": "Vadim Zhulanov"
+  "author": "Vadim Zhulanov",
+  "scripts": {
+    "lint": "node pre-commit.js",
+    "test": "node_modules/.bin/mocha --timeout 60000 --slow 30000 test/webdriver.js"
+  },
+  "pre-commit": [
+    "lint",
+    "test"
+  ]
 }
