--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.0.15",
     "chai": "^3.4.1",
+    "eslint": "^2.3.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.0.0",
@@ -18,20 +19,26 @@
     "gulp-stylus": "^2.1.0",
     "gulp-uglify": "^1.4.2",
     "gulp-watch": "^4.3.5",
+    "lodash": "^4.6.1",
     "mocha": "^2.3.4",
     "nib": "^1.1.0",
     "precommit-hook": "^3.0.0",
     "run-sequence": "^1.1.4",
     "selenium-standalone": "^4.7.2",
+    "shelljs": "^0.6.0",
     "webdriverio": "^3.3.0"
   },
   "author": "Vadim Zhulanov",
   "scripts": {
+    "postinstall": "rm -f .jshintignore .jshintrc",
+    "build": "node_modules/.bin/gulp build",
     "lint": "node pre-commit.js",
-    "test": "node_modules/.bin/mocha --timeout 60000 --slow 30000 test/webdriver.js"
+    "test": "node_modules/.bin/mocha --timeout 60000 --slow 30000 test/webdriver.js",
+    "validate": "npm ls"
   },
   "pre-commit": [
     "lint",
-    "test"
+    "test",
+    "build"
   ]
 }
