--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "sindel",
-  "version": "0.1.0",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/maiordom/sindel"
+  "author": {
+    "name": "Vadim Zhulanov",
+    "url": "https://github.com/maiordom"
+  },
+  "config": {
+    "name": "sindel",
+    "jsPath": "src",
+    "cssPath": "src",
+    "dist": "dist"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.0.15",
@@ -13,7 +17,7 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.0.0",
     "gulp-connect": "^2.2.0",
-    "gulp-minify-css": "^1.2.1",
+    "gulp-cssnano": "^2.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-stylus": "^2.1.0",
@@ -28,16 +32,28 @@
     "shelljs": "^0.6.0",
     "webdriverio": "^3.3.0"
   },
-  "author": "Vadim Zhulanov",
-  "scripts": {
-    "postinstall": "rm -f .jshintignore .jshintrc",
-    "build": "node_modules/.bin/gulp build",
-    "lint": "node pre-commit.js",
-    "test": "node_modules/.bin/mocha --timeout 60000 --slow 30000 test/webdriver.js",
-    "validate": "npm ls"
+  "engines": {
+    "node": ">4.0.0"
   },
+  "homepage": "https://github.com/maiordom/sindel",
+  "license": "MIT",
+  "name": "sindel",
   "pre-commit": [
     "lint",
     "test"
-  ]
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/maiordom/sindel"
+  },
+  "scripts": {
+    "build": "node_modules/.bin/gulp build",
+    "lint": "node pre-commit.js",
+    "postinstall": "rm -f .jshintignore .jshintrc && npm run selenium_install",
+    "selenium_install": "node_modules/.bin/selenium-standalone install",
+    "selenium_start": "node_modules/.bin/selenium-standalone start",
+    "test": "node_modules/.bin/mocha --timeout 60000 --slow 30000 test/webdriver.js",
+    "validate": "npm ls"
+  },
+  "version": "0.1.0"
 }
